CrOS Shelf: Fix shelf app button inkdrop mask

Bug: 920972
Change-Id: Ia308fd77d3978be7bd354aba75c785fb08c85fe6
Reviewed-on: https://chromium-review.googlesource.com/c/1411341
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623001}
Former-commit-id: 1f19badbc56ca0ba1318573bb7cad0b54c83425d